# zero2prod

./: Cargo.toml  builder.Dockerfile
.github/workflows/: audit.yml  main.yml
src/: app.rs  main.rs  router.rs
tests/: health_check.rs
